--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "geist": "^1.3.0",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.3.2",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
