--- a/hosting/.gitignore
+++ b/hosting/.gitignore
@@ -28,7 +28,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+
+# local env files
+.env*.local
 
 # vercel
 .vercel
@@ -36,11 +38,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.genkit/*
-.env*
-.apphosting.yaml
-
-# firebase
-firebase-debug.log
-firestore-debug.log
